--- a/Código Fonte/Android/app/build.gradle
+++ b/Código Fonte/Android/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile files('libs/gson-2.2.4.jar')
 }
