--- a/Código Fonte/Android/app/src/main/AndroidManifest.xml
+++ b/Código Fonte/Android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".mvc.views.HomeActivity"
+            android:name=".mvc.HomeActivity"
             android:label="@string/title_activity_home"
             android:screenOrientation="portrait" >
             <intent-filter>
