--- a/Código Fonte/Android/app/build.gradle
+++ b/Código Fonte/Android/app/build.gradle
@@ -21,9 +21,15 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+
     compile 'com.jakewharton:butterknife:6.1.0'
+
+    compile 'com.android.support:design:22.2.0'
+
     compile files('libs/gson-2.2.4.jar')
 }
