--- a/Código Fonte/Android/app/src/main/AndroidManifest.xml
+++ b/Código Fonte/Android/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
-            android:name=".presentation.home.SearchActivity"
+            android:name=".presentation.search.SearchActivity"
             android:label="@string/title_activity_home"
             android:screenOrientation="portrait" >
             <intent-filter>
